@@ -189,6 +189,21 @@ evutil_make_socket_nonblocking(evutil_socket_t fd)
 	return 0;
 }
 
+int
+evutil_make_listen_socket_reuseable(evutil_socket_t sock)
+{
+#ifndef WIN32
+	int one = 1;
+	/* REUSEADDR on Unix means, "don't hang on to this address after the
+	 * listener is closed."  On Windows, thoug, it means "don't keep other
+	 * processes from binding to this address while we're using it. */
+	return setsockopt(sock, SOL_SOCKET, SO_REUSEADDR, (void*) &one,
+	    (socklen_t)sizeof(one));
+#else
+	return 0;
+#endif
+}
+
 ev_int64_t
 evutil_strtoll(const char *s, char **endptr, int base)
 {
