@@ -141,7 +141,8 @@ Changes in current version:
  o New evthread_use_windows_threads() and evthread_use_pthreads() functions to set up the evthread callbacks with reasonable defaults.
  o Change the semantics of timeouts in conjunction with EV_PERSIST; timeouts in that case will now repeat until deleted.
  o sendfile, mmap and memory reference support for evbuffers.
-	
+ o New evutil_make_listen_socket_reuseable() to abstract SO_REUSEADDR.
+
 Changes in 1.4.0:
  o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.
  o demote most http warnings to debug messages
